--- a/Highway/Simulator.org
+++ b/Highway/Simulator.org
@@ -41,7 +41,6 @@
 
 from Tkinter import *
 from numpy import *
-from phi import *
 import random
 
 
@@ -77,7 +76,7 @@ class App:
         # Parameters
         self.h = 160 + 20
         self.w = 300
-        self.interval = 100
+        self.interval = 0 #Put non zero to see something
 	self.step = 5
 
         self.speeds_list = [20, 40, 80]
@@ -124,9 +123,11 @@ class App:
         self.c.focus_force()
         self.c.pack()
 
-        # Stopping the game
-        self.max_t = 90
-        self.t = 0
+        # Stopping the game, t counts the transitions, traj counts the trajectories
+        self.transitions = 90
+        self.t = 1
+        self.trajectories = 2
+        self.traj = 1
 
 	# Call the main function
 	self.c.after(0, self.update_cars)
@@ -211,8 +212,18 @@ class App:
         self.update_info()
 
         # Reset the timer
-        if self.t < self.max_t:
+        if self.t < self.transitions:
             self.t+=1
+            self.c.after(self.interval, self.update_cars)
+        elif self.traj < self.trajectories:
+            self.traj+=1
+            self.t = 1
+            self.state=[1, 160]
+            self.speed = 1
+            self.action = "none"
+            self.c.delete(self.my_car)
+            self.my_car = self.c.create_rectangle((self.w/2)-10, self.h - 50, (self.w/2)+10, self.h - 10, fill="blue")
+            [self.c.delete(car) for car in self.c.find_withtag("other_cars")]
             self.c.after(self.interval, self.update_cars)
         else:
             exit( 0 )
@@ -282,4 +293,5 @@ App.py: Simulator.org
   #+begin_src makefile
 Simulator_clean:
 	find . -maxdepth 1 -iname "App.py"   | xargs $(XARGS_OPT) rm
+	find . -maxdepth 1 -iname "App.pyc"   | xargs $(XARGS_OPT) rm
   #+end_src
